반응형 웹 수정

--- a/src/style/AboutMe.scss
+++ b/src/style/AboutMe.scss
@@ -196,3 +196,10 @@
     }
   }
 }
+
+// --------- 태블릿 버전 스타일 --------- \\
+@media (max-width: 1023px) and (min-width: 768px) {
+  .page2_skilsbox{
+    
+  }
+}
