--- a/src/style/Intro.scss
+++ b/src/style/Intro.scss
@@ -63,3 +63,51 @@
     line-height: 1.5;
   }
 }
+
+// --------- 태블릿 버전 스타일 --------- \\
+@media (max-width: 1023px) and (min-width: 768px) {
+  .intro_container {
+    padding: 15px;
+  }
+
+  .animated-background {
+    width: 450px;
+    height: 450px;
+  }
+
+  .intro_title h2 {
+    font-size: 2rem;
+  }
+
+  .intro_textWrap h3 {
+    font-size: 1.3rem;
+  }
+
+  .intro_textWrap p {
+    font-size: 0.95rem;
+  }
+}
+
+// --------- 모바일 버전 스타일 --------- \\
+@media (max-width: 767px) and (min-width: 375px) {
+  .intro_container {
+    padding: 10px;
+  }
+
+  .animated-background {
+    width: 300px;
+    height: 300px;
+  }
+
+  .intro_title h2 {
+    font-size: 1.5rem;
+  }
+
+  .intro_textWrap h3 {
+    font-size: 1.2rem;
+  }
+
+  .intro_textWrap p {
+    font-size: 0.9rem;
+  }
+}
