--- a/src/style/Intro.scss
+++ b/src/style/Intro.scss
@@ -1,113 +1,9 @@
-@import "./common";
-
-.intro_container {
+.pages {
   display: flex;
-  align-items: center;
   justify-content: center;
-  height: 100vh;
-  background: $tertiary-color;
-  position: relative;
-  overflow: hidden;
-  padding: 20px;
-  box-sizing: border-box;
-}
-
-.animated-background {
-  position: absolute;
-  width: 600px;
-  height: 600px;
-  animation: wiggle 2s infinite ease-in-out, spin 10s infinite linear,
-    moveBackground 10s infinite linear, morph 6s infinite ease-in-out;
-  background: linear-gradient(
-    45deg,
-    $animation-color1,
-    $animation-color2,
-    $animation-color3
-  );
-  background-size: 200% 200%;
-}
-
-.intro_contentWrap {
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  text-align: center;
+  height: 100vh; // 화면 전체 높이로 설정
+}
+.IntroPage {
   position: relative;
-  z-index: 1;
-  max-width: 800px;
-  width: 100%;
-  padding: 20px;
-  box-sizing: border-box;
-}
-
-.intro_title {
-  margin-bottom: 1rem;
-
-  h2 {
-    font-size: 2.5rem;
-  }
-}
-
-.intro_textWrap {
-  h3 {
-    font-size: 1.5rem;
-    color: $primary-color;
-    margin-bottom: 1rem;
-  }
-
-  p {
-    font-size: 1rem;
-    font-weight: 600;
-    color: #333;
-    margin-bottom: 1rem;
-    line-height: 1.5;
-  }
-}
-
-// --------- 태블릿 버전 스타일 --------- \\
-@media (max-width: 1023px) and (min-width: 768px) {
-  .intro_container {
-    padding: 15px;
-  }
-
-  .animated-background {
-    width: 450px;
-    height: 450px;
-  }
-
-  .intro_title h2 {
-    font-size: 2rem;
-  }
-
-  .intro_textWrap h3 {
-    font-size: 1.3rem;
-  }
-
-  .intro_textWrap p {
-    font-size: 0.95rem;
-  }
-}
-
-// --------- 모바일 버전 스타일 --------- \\
-@media (max-width: 767px) and (min-width: 375px) {
-  .intro_container {
-    padding: 10px;
-  }
-
-  .animated-background {
-    width: 300px;
-    height: 300px;
-  }
-
-  .intro_title h2 {
-    font-size: 1.5rem;
-  }
-
-  .intro_textWrap h3 {
-    font-size: 1.2rem;
-  }
-
-  .intro_textWrap p {
-    font-size: 0.9rem;
-  }
 }
