디자인 중간 업데이트

--- a/src/style/Background.scss
+++ b/src/style/Background.scss
@@ -1,13 +1,45 @@
-.gradient-background {
+.gradient_background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(135deg, #cd97ff, #7c81ff);
+  overflow: hidden;
+  z-index: -1;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh; // 페이지 길이를 화면 전체로 설정
-  background: linear-gradient(135deg, #cd97ff, #7c81ff);
-  position: absolute;
-  width: 100%;
-  overflow: hidden;
-  text-align: center;
-  z-index: -1;
+
+  .cloudwrap {
+    position: absolute;
+    width: 40rem; // 원하는 구름 이미지의 크기로 조정
+    height: auto;
+
+    &.cloud2,
+    &.cloud4 {
+      left: 0;
+    }
+
+    &.cloud3,
+    &.cloud5 {
+      right: 0;
+    }
+  }
+
+  .cloud2 {
+    top: 0%;
+  }
+
+  .cloud3 {
+    top: 35%;
+  }
+
+  .cloud4 {
+    top: 50%;
+  }
+
+  .cloud5 {
+    top: 75%;
+  }
 }
