--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -3,3 +3,57 @@ $black: #161616;
 $primary-color: rgb(52, 52, 52);
 $secondary-color: #ff7e38;
 $tertiary-color: white;
+
+/* 인터넷 창모드 디자인 */
+.BrowserWindow {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid $primary-color;
+  box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.7);
+  background: #fff;
+
+  .contentsTap {
+    background-color: #5f649b;
+    width: 100%;
+
+    .tapWrap {
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 1rem;
+      height: 1rem;
+      p {
+        font-size: 20px;
+        font-weight: 700;
+      }
+    }
+  }
+
+  .Browser_iconWrap {
+    display: flex;
+    gap: 5px;
+    a {
+      font-size: 15px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 1.2rem;
+      height: 1.2rem;
+      border: 1px solid black;
+      box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.5);
+    }
+  }
+}
+
+.backgroundColor {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #abbae5;
+  padding: 15px;
+}
