--- a/src/style/AboutMeText.scss
+++ b/src/style/AboutMeText.scss
@@ -10,15 +10,43 @@
 }
 
 .AboutMeText_titleWrap {
-  p {
-    margin: 1rem;
-    margin-left: 30rem; // 왼쪽 여백 추가
-    font-size: 4rem;
-    font-weight: 700;
-    color: white;
-    -webkit-text-stroke: 2px #000000;
-    text-shadow: 5px 5px 1px #f80186;
-    transform: rotate(10deg);
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+
+  .aboutmeLogo {
+    width: 20rem;
+    position: absolute;
+    bottom: 1rem;
+    left: 0;
+    &.left_to_center {
+      animation: leftToCenter 2s forwards;
+    }
+    &.center_to_left {
+      animation: moveToLeft 2s forwards;
+    }
+  }
+}
+
+@keyframes leftToCenter {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+@keyframes centerToLeft {
+  from {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  to {
+    left: 0;
   }
 }
 
@@ -37,7 +65,18 @@
 .AboutMeText_infoWrap,
 .AboutMeText_descriptionWrap {
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 1rem;
+  position: relative; /* 부모 요소에 position: relative; 추가 */
+}
+
+.AboutMeText_infoWrap {
+  .heart4 {
+    width: 10rem;
+    position: absolute; /* 자식 요소에 position: absolute; 추가 */
+    bottom: 0; /* bottom 속성 적용 */
+  }
 }
 
 .infoText_wrap {
