--- a/src/style/Project.scss
+++ b/src/style/Project.scss
@@ -1,10 +1,51 @@
+.project_titleWrap {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+
+  .projectsIcon {
+    width: 20rem;
+    position: absolute;
+    bottom: 1rem;
+    right: 0; /* 초기 위치를 오른쪽으로 설정 */
+    &.right_to_center {
+      animation: rightToCenter 2s forwards;
+    }
+    &.center_to_right {
+      animation: centerToRight 2s forwards;
+    }
+  }
+}
+
+@keyframes rightToCenter {
+  from {
+    right: 0;
+  }
+  to {
+    right: 50%; 
+    transform: translateX(50%); 
+  }
+}
+
+@keyframes centerToRight {
+  from {
+    right: 50%; 
+    transform: translateX(50%);
+  }
+  to {
+    right: 0;
+  }
+}
+
 .productDetail_wrap {
   display: flex;
   flex-direction: column;
   gap: 10px;
 
   .product {
-    padding: 10px;
+    padding: 20px;
     border: 1px solid black;
     font-size: 16px;
     font-weight: 700;
@@ -96,11 +137,13 @@
 }
 .imgfile {
   flex: 1;
-  min-width: 200px;
-  max-width: 200px;
+  margin: 10px;
+  border: 1px solid black;
+  min-width: 250px;
+  max-width: 250px;
   img {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover; /* 이미지가 컨테이너에 맞게 조정 */
   }
 }
