--- a/src/style/Project.scss
+++ b/src/style/Project.scss
@@ -24,14 +24,14 @@
     right: 0;
   }
   to {
-    right: 50%; 
-    transform: translateX(50%); 
+    right: 50%;
+    transform: translateX(50%);
   }
 }
 
 @keyframes centerToRight {
   from {
-    right: 50%; 
+    right: 50%;
     transform: translateX(50%);
   }
   to {
@@ -141,10 +141,14 @@
   border: 1px solid black;
   min-width: 250px;
   max-width: 250px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 250px;
   img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* 이미지가 컨테이너에 맞게 조정 */
+    object-fit: cover;
   }
 }
 
@@ -155,6 +159,8 @@
 
 .projectCards {
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 10px; /* 아이콘 간 간격 추가 */
 
   .projectCard {
