스타일 파일 정리

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,5 @@
+@import "./common.scss";
+
 //------------------------desktop.ver
 @import "./desktop/Background.scss";
 @import "./desktop/BackImage.scss";
