--- a/src/style/desktop/BackImage.scss
+++ b/src/style/desktop/BackImage.scss
@@ -21,6 +21,24 @@
     top: 70px;
     left: 230px;
     animation: moveUpDown 3s ease-in-out infinite alternate;
+
+    @include respond-to("mobile") {
+      width: 100px; // 모바일 전용 스타일
+      top: 35px;
+      left: 115px;
+    }
+
+    @include respond-to("tablet") {
+      width: 150px; // 태블릿 전용 스타일
+      top: 50px;
+      left: 172px;
+    }
+
+    @include respond-to("desktop") {
+      width: 200px; // 데스크탑 전용 스타일
+      top: 70px;
+      left: 230px;
+    }
   }
 
   .glitter1 {
@@ -28,6 +46,24 @@
     bottom: 70px;
     right: 100px;
     animation: moveUpDown 1.5s ease-in-out infinite alternate;
+
+    @include respond-to("mobile") {
+      width: 75px; // 모바일 전용 스타일
+      bottom: 35px;
+      right: 50px;
+    }
+
+    @include respond-to("tablet") {
+      width: 100px; // 태블릿 전용 스타일
+      bottom: 50px;
+      right: 67px;
+    }
+
+    @include respond-to("desktop") {
+      width: 150px; // 데스크탑 전용 스타일
+      bottom: 70px;
+      right: 100px;
+    }
   }
 }
 
