--- a/src/style/desktop/IntroText.scss
+++ b/src/style/desktop/IntroText.scss
@@ -8,7 +8,6 @@
   flex-direction: column;
   text-align: center;
   z-index: 1;
-  // Image_back보다 높고 image_front보다 낮은 z-index 설정
   height: 100%;
   width: 100%;
 }
@@ -27,6 +26,23 @@
     position: absolute;
     z-index: 1;
     transform: rotate(160deg);
+    @include respond-to("mobile") {
+      border: 0.5rem solid #f80186;
+      width: 400px;
+      height: 150px;
+    }
+
+    @include respond-to("tablet") {
+      border: 0.75rem solid #f80186;
+      width: 600px;
+      height: 225px;
+    }
+
+    @include respond-to("desktop") {
+      border: 0.5rem solid #f80186;
+      width: 800px;
+      height: 300px;
+    }
   }
 
   .circle2 {
@@ -37,6 +53,23 @@
     position: absolute;
     z-index: 1;
     transform: rotate(160deg);
+    @include respond-to("mobile") {
+      border: 0.5rem solid #f80186;
+      width: 350px;
+      height: 125px;
+    }
+
+    @include respond-to("tablet") {
+      border: 0.75rem solid #f80186;
+      width: 525px;
+      height: 187.5px;
+    }
+
+    @include respond-to("desktop") {
+      border: 1rem solid #f80186;
+      width: 700px;
+      height: 250px;
+    }
   }
 }
 
@@ -52,5 +85,19 @@
     -webkit-text-stroke: 2px #f80186;
     text-shadow: -5px 5px 1px #f80186;
     letter-spacing: -12px; // 글자 간격을 좁게 설정
+    @include respond-to("mobile") {
+      font-size: 3.5rem;
+      letter-spacing: -6px;
+    }
+
+    @include respond-to("tablet") {
+      font-size: 5.25rem;
+      letter-spacing: -9px;
+    }
+
+    @include respond-to("desktop") {
+      font-size: 7rem;
+      letter-spacing: -12px;
+    }
   }
 }
