--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,5 @@
 @import "./common.scss";
+@import "./themes/MediaQueries.scss";
 
 //------------------------desktop.ver
 @import "./desktop/Background.scss";
