--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -6,6 +6,7 @@ $tertiary-color: white;
 
 /* 인터넷 창모드 디자인 */
 .BrowserWindow {
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -27,7 +28,7 @@ $tertiary-color: white;
       gap: 1rem;
       height: 1rem;
       p {
-        font-size: 20px;
+        font-size: 1.25rem; 
         font-weight: 700;
       }
     }
@@ -50,6 +51,7 @@ $tertiary-color: white;
 }
 
 .backgroundColor {
+
   flex-grow: 1;
   display: flex;
   align-items: center;
