--- a/src/style/tablet/T_aboutMe.scss
+++ b/src/style/tablet/T_aboutMe.scss
@@ -15,7 +15,7 @@
   position: relative;
 
   .aboutmeLogo {
-    width: 20rem;
+    width: 15rem;
     position: absolute;
     bottom: 1rem;
     left: 0;
@@ -51,8 +51,8 @@
 .faceImg {
   position: relative;
   img {
-    width: 175px;
-    height: 175px;
+    max-width: 150px;
+    max-height: 150px;
     object-fit: cover;
     border-radius: 50%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -68,10 +68,10 @@
   gap: 1rem;
   position: relative; /* 부모 요소에 position: relative; 추가 */
 }
-
 .AboutMeText_descriptionWrap {
-  margin: 0 18rem;
-  min-width: 1024px;
+  flex-direction: column;
+  margin: 0 5rem;
+  min-width: 410px;
 }
 
 .AboutMeText_infoWrap {
@@ -90,7 +90,7 @@
   .info {
     padding: 10px;
     border: 1px solid black;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: 700;
     background-color: white;
 
@@ -115,15 +115,20 @@
   align-items: stretch;
 }
 
+.skills_wrap,
 .description_wrap {
-  width: 100%;
+  min-width: 440px;
 }
 .textContents {
   width: 100%; // 추가: 내용이 가득 차도록 설정
   padding: 1rem;
   background-color: white;
   border: 1px solid black;
+  h2 {
+    font-size: 1.3rem;
+  }
   p {
+    font-size: 0.8rem;
     position: relative;
     margin-bottom: 1rem;
 
