포트폴리오 페이지 완료

--- a/src/index.css
+++ b/src/index.css
@@ -21,5 +21,6 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 110vh;
+  min-height: 100vh;
+  padding: 5rem 0;
 }
