--- a/src/style/desktop/BackImage.scss
+++ b/src/style/desktop/BackImage.scss
@@ -17,52 +17,52 @@
   }
 
   .y2k_1 {
-    width: 200px;
-    top: 70px;
-    left: 230px;
+    width: 12rem;
+    top: 3rem;
+    left: 15rem;
     animation: moveUpDown 3s ease-in-out infinite alternate;
 
     @include respond-to("mobile") {
-      width: 100px; // 모바일 전용 스타일
-      top: 35px;
-      left: 115px;
+      width: 6rem; // 모바일 전용 스타일
+      top: 1.5rem;
+      left: 7.5rem;
     }
 
     @include respond-to("tablet") {
-      width: 150px; // 태블릿 전용 스타일
-      top: 50px;
+      width: 9rem; // 태블릿 전용 스타일
+      top: 2.25rem;
       left: 172px;
     }
 
     @include respond-to("desktop") {
-      width: 200px; // 데스크탑 전용 스타일
-      top: 70px;
-      left: 230px;
+      width: 12rem; // 데스크탑 전용 스타일
+      top: 3rem;
+      left: 15rem;
     }
   }
 
   .glitter1 {
-    width: 150px;
-    bottom: 70px;
-    right: 100px;
+    width: 10rem;
+    bottom: 4rem;
+    right: 6rem;
     animation: moveUpDown 1.5s ease-in-out infinite alternate;
 
     @include respond-to("mobile") {
-      width: 75px; // 모바일 전용 스타일
-      bottom: 35px;
-      right: 50px;
+      width: 5rem; // 모바일 전용 스타일
+      bottom: 2rem;
+      right: 3rem;
     }
 
     @include respond-to("tablet") {
       width: 100px; // 태블릿 전용 스타일
-      bottom: 50px;
-      right: 67px;
+      bottom: 3rem;
+      right: 4.5rem;
     }
 
     @include respond-to("desktop") {
-      width: 150px; // 데스크탑 전용 스타일
-      bottom: 70px;
-      right: 100px;
+      width: 10rem; // 데스크탑 전용 스타일
+      bottom: 4rem;
+      right: 6rem;
     }
   }
 }
