--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
 }
 
 * {
+  outline: none;
   -webkit-user-select: none; /* Chrome, Safari, Opera */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
