--- a/src/style/desktop/Project.scss
+++ b/src/style/desktop/Project.scss
@@ -55,28 +55,32 @@
       display: flex;
       align-items: center;
       gap: 10px;
-      max-width: 800px; /* 고정된 너비 설정 */
-      margin: 0 auto; /* 가운데 정렬 */
-      flex-wrap: wrap; /* 내용이 겹치지 않도록 */
+      width: 800px;
+      margin: 0 auto;
+      flex-wrap: wrap;
     }
 
     &.slideWrap {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      max-width: 800px; /* 고정된 너비 설정 */
-      margin: 0 auto; /* 가운데 정렬 */
+      width: 800px;
+      margin: 0 auto;
 
-      button {
-        background-color: white;
-        color: #5f649b;
-        border: none;
-        outline: none;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 3rem;
+      .slick-prev,
+      .slick-next {
+        z-index: 1;
+        font-size: 2rem;
       }
+      .slick-prev:before,
+      .slick-next:before {
+        color: #5f649b;
+      }
+      .slick-next {
+        right: -15px;
+      }
+      .slick-prev{
+        left: -15px;
+      }
+
+
     }
   }
 }
@@ -135,16 +139,18 @@
     }
   }
 }
+
 .imgfile {
   flex: 1;
   margin: 10px;
   border: 1px solid black;
   min-width: 250px;
   max-width: 250px;
+  height: 250px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 250px;
+
   img {
     width: 100%;
     height: 100%;
@@ -157,19 +163,44 @@
   width: 400px;
 }
 
-.projectCards {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px; /* 아이콘 간 간격 추가 */
-
+.product.slideWrap {
   .projectCard {
-    flex: 0 0 auto;
+    padding: 10px;
     img {
       border: 1px solid black;
-      width: 150px;
-      height: auto;
+      width: 170px;
       object-fit: cover;
+      cursor: pointer;
+      outline: none; 
+    }
+  }
+}
+
+.slick-slider.slick-initialized {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slick-dots {
+  bottom: -15px !important;
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  list-style: none;
+
+  li {
+    margin: 0 5px;
+
+    button {
+      align-items: center;
+      font-size: 5px;
+      width: 10px !important;
+      height: 10px !important;
+      border-radius: 50%;
+      background-color: #ccc; /* Dot 색상 */
+      border: none;
+      outline: none;
       cursor: pointer;
     }
   }
