--- a/src/style/mobile/M_project.scss
+++ b/src/style/mobile/M_project.scss
@@ -52,31 +52,21 @@
     background-color: white;
 
     &.detailWrap {
-      max-width: 380px;
+      max-width: 400px;
       display: flex;
-      flex-direction: column;
       align-items: center;
       gap: 10px;
-      margin: 0 auto; /* 가운데 정렬 */
-      flex-wrap: wrap; /* 내용이 겹치지 않도록 */
+      margin: 0 auto;
+      flex-wrap: wrap;
     }
 
     &.slideWrap {
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      max-width: 380px;
+      max-width: 400px;
       margin: 0 auto;
 
-      button {
-        background-color: white;
-        color: #5f649b;
-        border: none;
-        outline: none;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 1.5rem;
+      .slick-prev,
+      .slick-next {
+        display: none !important;
       }
     }
   }
@@ -155,22 +145,47 @@
 
 .explanation {
   flex: 2;
-  width: 380px;
+  width: 400px;
 }
 
-.projectCards {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px; /* 아이콘 간 간격 추가 */
-
+.product.slideWrap {
   .projectCard {
-    flex: 0 0 auto;
+    padding: 10px;
     img {
       border: 1px solid black;
-      width: 65px;
-      height: auto;
+      width: 85px;
       object-fit: cover;
+      cursor: pointer;
+      outline: none;
+    }
+  }
+}
+
+.slick-slider.slick-initialized {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slick-dots {
+  bottom: -8px !important;
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  list-style: none;
+
+  li {
+    margin: 0 5px;
+
+    button {
+      align-items: center;
+      font-size: 5px;
+      width: 10px !important;
+      height: 10px !important;
+      border-radius: 50%;
+      background-color: #ccc; /* Dot 색상 */
+      border: none;
+      outline: none;
       cursor: pointer;
     }
   }
