--- a/src/style/desktop/AboutMeText.scss
+++ b/src/style/desktop/AboutMeText.scss
@@ -14,7 +14,6 @@
   align-items: center;
   position: relative;
 
-
   .aboutmeLogo {
     width: 20rem;
     position: absolute;
@@ -58,6 +57,24 @@
     border-radius: 50%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     background-color: white;
+  }
+}
+
+.clickIcon {
+  width: 30px;
+  position: absolute;
+  bottom: -1rem;
+  right: 11.5rem;
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
   }
 }
 
