--- a/src/style/mobile/M_aboutMe.scss
+++ b/src/style/mobile/M_aboutMe.scss
@@ -60,6 +60,24 @@
   }
 }
 
+.clickIcon {
+  width: 20px;
+  position: absolute;
+  bottom: 0;
+  right: 10rem;
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
+
 .AboutMeText_infoWrap,
 .AboutMeText_descriptionWrap {
   flex-direction: column;
